RESOLVED FIXED78057
Fix the caculation of preDelayFrames in DynamicsCompressorKernel
https://bugs.webkit.org/show_bug.cgi?id=78057
Summary Fix the caculation of preDelayFrames in DynamicsCompressorKernel
Raymond
Reported 2012-02-07 16:51:01 PST
Fix the caculation of preDelayFrames in DynamicsCompressorKernel
Attachments
Patch (1.60 KB, patch)
2012-02-07 16:58 PST, Raymond
no flags
Raymond
Comment 1 2012-02-07 16:58:15 PST
Raymond
Comment 2 2012-02-07 17:04:00 PST
Hi Chris Without this patch, the DynamicsCompressorNode actually don't have any predelay applied for the compressor since the preDelayFrames will always be 0. Please help to take a review ;)
Raymond
Comment 3 2012-02-07 17:06:55 PST
(In reply to comment #2) > Hi Chris > > Without this patch, the DynamicsCompressorNode actually don't have any predelay applied for the compressor since the preDelayFrames will always be 0. Please help to take a review ;) oh, though preDelayFrames will always be 0, due to the fact that the read is done before write, the actual preDelayFrame applied is 1024 not 0
Chris Rogers
Comment 4 2012-02-08 19:01:05 PST
Comment on attachment 125957 [details] Patch Wow - good catch! That was really a bad one...
WebKit Review Bot
Comment 5 2012-02-08 20:34:54 PST
Comment on attachment 125957 [details] Patch Clearing flags on attachment: 125957 Committed r107172: <http://trac.webkit.org/changeset/107172>
WebKit Review Bot
Comment 6 2012-02-08 20:34:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.