Fix the caculation of preDelayFrames in DynamicsCompressorKernel https://bugs.webkit.org/show_bug.cgi?id=78057

Patch by Raymond Liu <raymond.liu@intel.com> on 2012-02-08
Reviewed by Chris Rogers.

No new tests required.

* platform/audio/DynamicsCompressorKernel.cpp:
(WebCore::DynamicsCompressorKernel::setPreDelayTime):

Canonical link: https://commits.webkit.org/95079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107172 268f45cc-cd09-0410-ab3c-d52691b4dbfc